(rule
 (enabled_if
  (= %{os_type} Win32))
 ;   This addresses: https://github.com/ocaml/ocaml/issues/13917
 (action
  (with-stdout-to
   cuda-original-path.bat
   (echo
    "if not exist %LOCALAPPDATA%\\dune\\cuda_path_link (mklink /J %LOCALAPPDATA%\\dune\\cuda_path_link \"%{env:CUDA_PATH=}\")"))))

(rule
 (enabled_if
  (= %{os_type} Win32))
 (deps cuda-original-path.bat)
 (action
  (progn
   (run cmd "/C" cuda-original-path.bat)
   (with-stdout-to
    cuda-path.txt
    (echo "%{env:LOCALAPPDATA=}/dune/cuda_path_link")))))

(rule
 (enabled_if
  (= %{os_type} Win32))
 (deps cuda-original-path.bat)
 (action
  (progn
   (run cmd "/C" cuda-original-path.bat)
   (with-stdout-to
    subdir-cuda-path.txt
    (echo "%{env:LOCALAPPDATA=}/dune/cuda_path_link")))))

(rule
 (enabled_if
  (<> %{os_type} Win32))
 (action
  (with-stdout-to
   subdir-cuda-path.txt
   (echo "%{env:CUDA_PATH=/usr/local/cuda}"))))

(rule
 (enabled_if
  (<> %{os_type} Win32))
 (action
  (with-stdout-to
   cuda-path.txt
   (echo "%{env:CUDA_PATH=/usr/local/cuda}"))))

(env
 (_
  ;  Don't remove: at least on the Windows platform, the flags are needed by downstream packages.
  (link_flags
   -cclib
   -L%{read:cuda-path.txt}/lib64/stubs
   -cclib
   -L%{read:cuda-path.txt}/lib64
   -cclib
   -L%{read:cuda-path.txt}/lib/x64)))

(library
 (public_name cudajit)
 (name cudajit)
 (preprocess
  (pps ppx_sexp_conv))
 (libraries cuda_ffi nvrtc_ffi sexplib0))
