(rule
 (enabled_if
  (= %{os_type} Win32))
 (target cuda-original-path.bat)
 ;   This addresses: https://github.com/ocaml/ocaml/issues/13917
 (action
  (progn
   (with-stdout-to
    cuda-original-path.bat
    (echo
     "echo | set /p=\"%LOCALAPPDATA:\\=/%/cuda_path_link\" > .\\cuda-path.txt\r\nif not exist %LOCALAPPDATA%\\cuda_path_link (mklink /J %LOCALAPPDATA%\\cuda_path_link \"%{env:CUDA_PATH=}\")"))
   (system "dir .")
   (system "dir %LOCALAPPDATA%\\..")
   (system "dir %LOCALAPPDATA%"))))

(rule
 (enabled_if
  (= %{os_type} Win32))
 (target cuda-path.txt)
 (deps cuda-original-path.bat)
 (action
  (progn
   (run cmd "/C" cuda-original-path.bat)
   (system "dir %LOCALAPPDATA%\\cuda_path_link")
   (system "dir %LOCALAPPDATA%\\cuda_path_link\\lib")
   (system "dir %LOCALAPPDATA%\\cuda_path_link\\include")
   (system "dir %LOCALAPPDATA%\\cuda_path_link\\lib\\x64"))))

(rule
 (enabled_if
  (<> %{os_type} Win32))
 (action
  (with-stdout-to
   cuda-path.txt
   (echo "%{env:CUDA_PATH=/usr/local/cuda}"))))

(env
 (_
  ;  Don't remove: at least on the Windows platform, the flags are needed by downstream packages.
  (link_flags
   -L
   %{read:cuda-path.txt}/lib64/stubs
   -L
   %{read:cuda-path.txt}/lib64
   -L
   %{read:cuda-path.txt}/lib/x64)))

(library
 (public_name cudajit)
 (name cudajit)
 (preprocess
  (pps ppx_sexp_conv))
 (libraries cuda_ffi nvrtc_ffi sexplib0))
