(library
 (public_name cudajit.cuda_ffi)
 (name cuda_ffi)
 (libraries ctypes.foreign sexplib0)
 (preprocess
  (pps ppx_sexp_conv))
 (flags :standard -cclib -lcuda -w -9-11-27 -cclib -I,/usr/local/cuda/include)
;  (foreign_stubs
;   (language c)
;   (flags :standard -I /usr/local/cuda/include -L /usr/local/cuda/lib64/stubs))
 (ctypes
  (external_library_name libcuda)
  (build_flags_resolver
   (vendored
    (c_library_flags -lcuda)))
  (headers
   (include "cuda.h"))
  (type_description
   (instance Types)
   (functor Bindings_types))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Bindings))
  (generated_types Types_generated)
  (generated_entry_point C)))
