(library
 (public_name cudajit.cuda_ffi)
 (name cuda_ffi)
 (libraries ctypes.foreign sexplib0)
 (preprocess
  (pps ppx_sexp_conv))
 (flags :standard -w -9-11-27)
 (ctypes
  (external_library_name libcuda)
  (build_flags_resolver
   (vendored
    (c_flags :standard -fPIC)
    (c_library_flags
     C:\Users\lukst\GitHub\ocaml-cudajit-issue\cuda_path_link\lib\x64\cuda.lib
     -I
     %{env:CUDA_PATH=C:\Users\lukst\GitHub\ocaml-cudajit-issue\cuda_path_link}\include
     -L
     %{env:CUDA_PATH=C:\Users\lukst\GitHub\ocaml-cudajit-issue\cuda_path_link}\lib\x64)))
  (headers
   (include "cuda.h"))
  (type_description
   (instance Types)
   (functor Bindings_types))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Bindings))
  (generated_types Types_generated)
  (generated_entry_point C)))
