(rule
 (enabled_if
  (<> %{os_type} Win32))
 (action
  (with-stdout-to
   cuda-lib.txt
   (echo "-lcuda"))))

(rule
 (enabled_if
  (= %{os_type} Win32))
 (action
  (with-stdout-to
   cuda-lib.txt
   (echo "cuda.lib"))))

(library
 (public_name cudajit.cuda_ffi)
 (name cuda_ffi)
 (libraries ctypes.foreign sexplib0)
 (preprocess
  (pps ppx_sexp_conv))
 (flags :standard -w -9-11-27)
 (ctypes
  (external_library_name libcuda)
  (build_flags_resolver
   (vendored
    (c_flags :standard -fPIC -I %{read:../subdir-cuda-path.txt}/include)
    (c_library_flags
     %{read:cuda-lib.txt}
     -I
     %{read:../cuda-path.txt}/include
     -L
     %{read:../cuda-path.txt}/lib64/stubs
     -L
     %{read:../cuda-path.txt}/lib64
     -L
     %{read:../cuda-path.txt}/lib/x64)))
  (headers
   (include "cuda.h"))
  (type_description
   (instance Types)
   (functor Bindings_types))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Bindings))
  (generated_types Types_generated)
  (generated_entry_point C)))
