(library
 (public_name cudajit.nvrtc_ffi)
 (name nvrtc_ffi)
 (libraries ctypes.foreign sexplib0)
 (preprocess
  (pps ppx_sexp_conv))
 (flags :standard -w -9-11-27)
 (ctypes
  (external_library_name libnvrtc)
  (build_flags_resolver
   (vendored
    (c_library_flags
     -lnvrtc
     -I
     /usr/local/cuda/include
     -L
     /usr/local/cuda/lib64/stubs)))
  (headers
   (include "nvrtc.h"))
  (type_description
   (instance Types)
   (functor Bindings_types))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Bindings))
  (generated_types Types_generated)
  (generated_entry_point C)))
