(rule
 (enabled_if
  (<> %{os_type} Win32))
 (action
  (with-stdout-to
   nvrtc-lib.txt
   (echo "-lnvrtc"))))

(rule
 (enabled_if
  (= %{os_type} Win32))
 (action
  (with-stdout-to
   nvrtc-lib.txt
   (echo "nvrtc.lib"))))

(library
 (public_name cudajit.nvrtc_ffi)
 (name nvrtc_ffi)
 (libraries ctypes.foreign sexplib0)
 (preprocess
  (pps ppx_sexp_conv))
 (flags :standard -w -9-11-27)
 (ctypes
  (external_library_name libnvrtc)
  (build_flags_resolver
   (vendored
    (c_flags :standard -fPIC -I %{read:../src/cuda-path.txt}/include)
    (c_library_flags
     %{read:nvrtc-lib.txt}
     -I
     %{read:../src/cuda-path.txt}/include
     -L
     %{read:../src/cuda-path.txt}/lib64/stubs
     -L
     %{read:../src/cuda-path.txt}/lib64
     -L
     %{read:../src/cuda-path.txt}/lib/x64)))
  (headers
   (include "nvrtc.h"))
  (type_description
   (instance Types)
   (functor Bindings_types))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Bindings))
  (generated_types Types_generated)
  (generated_entry_point C)))
